--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Silenti Anima</title>
+  <title>Silentium</title>
+  <h3>Silenti Anima</h3>
   <style>
     body {
       font-family: Arial, sans-serif;
