--- a/index.html
+++ b/index.html
@@ -1,59 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Silentium</title>
-  <h3>Silenti Anima</h3>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: white;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 0.2em;
-    }
-    p {
-      margin-bottom: 2em;
-      font-size: 1.2em;
-      color: #ccc;
-    }
-    .links {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      max-width: 300px;
-      margin: auto;
-    }
-    .links a {
-      text-decoration: none;
-      background: #1e90ff;
-      color: white;
-      padding: 15px;
-      border-radius: 10px;
-      font-size: 1.1em;
-      transition: 0.3s;
-    }
-    .links a:hover {
-      background: #63b3ff;
-      transform: scale(1.05);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Silentium</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Silenti Anima</h1>
-  <p>Мої канали зв'язку</p>
-
-  <div class="links">
-    <a href="https://t.me/yourusername" target="_blank">Telegram</a>
-    <a href="mailto:youremail@example.com">Email</a>
-    <a href="https://github.com/silenti-anima" target="_blank">GitHub</a>
-    <a href="https://www.youtube.com/yourchannel" target="_blank">YouTube</a>
-    <a href="https://discord.gg/yourserver" target="_blank">Discord</a>
-  </div>
+    <div class="profile">
+        <img src="assets/avatar.jpg" alt="Фото профілю" class="avatar">
+        <h1>Silentium</h1>
+        <p class="tagline">Де мене можна знайти</p>
+        <div class="links">
+          <a href="https://discord.com/invite/72FU6MhztR">Discord
+            <p class="par">RocketScates</p>
+          </a>
+          <a href="https://github.com/SilentiAnima">GitHub</a>
+<!--          <a href="https://x.com/SilentiAnima">Twitter</a> -->
+          <a href="https://myanimelist.net/profile/SilentiAnima">MyAnimeList</a>
+          <a href="https://www.twitch.tv/silentianima">Twitch</a>
+        </div>
+      </div>
 </body>
 </html>
